rename list-group-unstyled__card and globals inside it

--- a/article.html
+++ b/article.html
@@ -223,7 +223,7 @@
                                           aria-expanded="false"
                                           aria-haspopup="true"
                                           type="button"
-                                          class="_131n1yh topic-dropdown"
+                                          class="link-block topic-dropdown"
                                         >
                                           <div class="_10o1uew">
                                             <div class="_pez1s5">Topics</div>
@@ -462,7 +462,7 @@
                             data-no-client-routing="true"
                             data-testid="header-menu-link"
                             href="/resources/hosting-experiences/t/getting-started-53"
-                            class="_131n1yh"
+                            class="link-block"
                           >
                             <div class="_1u60u8g">
                               <div class="_hgs47m">
@@ -478,7 +478,7 @@
                             data-no-client-routing="true"
                             data-testid="header-menu-link"
                             href="/resources/hosting-experiences/t/attracting-bookings-59"
-                            class="_131n1yh"
+                            class="link-block"
                           >
                             <div class="_1u60u8g">
                               <div class="_hgs47m">
@@ -496,7 +496,7 @@
                             data-no-client-routing="true"
                             data-testid="header-menu-link"
                             href="/resources/hosting-experiences/t/providing-a-5-star-experience-61"
-                            class="_131n1yh"
+                            class="link-block"
                           >
                             <div class="_1u60u8g">
                               <div class="_hgs47m">
@@ -514,7 +514,7 @@
                             data-no-client-routing="true"
                             data-testid="header-menu-link"
                             href="/resources/hosting-experiences/t/responsible-hosting-64"
-                            class="_131n1yh"
+                            class="link-block"
                           >
                             <div class="_1u60u8g">
                               <div class="_hgs47m">
@@ -532,7 +532,7 @@
                             data-no-client-routing="true"
                             data-testid="header-menu-link"
                             href="/resources/hosting-experiences/t/online-experiences-55"
-                            class="_131n1yh"
+                            class="link-block"
                           >
                             <div class="_1u60u8g">
                               <div class="_hgs47m">
@@ -562,7 +562,7 @@
                             data-no-client-routing="true"
                             data-testid="header-menu-link"
                             href="/resources/hosting-experiences/t/news-and-updates-for-experiences-56"
-                            class="_131n1yh"
+                            class="link-block"
                           >
                             <div class="_1u60u8g">
                               <div class="_hgs47m">
@@ -584,7 +584,7 @@
                       data-no-client-routing="true"
                       data-testid="header-menu-link"
                       href="/host/homes"
-                      class="_131n1yh"
+                      class="link-block"
                     >
                       <div class="_1u60u8g">
                         <div class="_hgs47m">
@@ -632,7 +632,7 @@
                         data-no-client-routing="true"
                         data-testid="header-menu-link"
                         href="/users/show/423517614"
-                        class="_131n1yh"
+                        class="link-block"
                       >
                         <div class="_1u60u8g">
                           <div class="_hgs47m">
@@ -667,7 +667,7 @@
                         data-no-client-routing="true"
                         data-testid="header-menu-link"
                         href="/account-settings"
-                        class="_131n1yh"
+                        class="link-block"
                       >
                         <div class="_1u60u8g">
                           <div class="_hgs47m">
@@ -716,7 +716,7 @@
                         data-no-client-routing="true"
                         data-testid="header-menu-link"
                         href="/help"
-                        class="_131n1yh"
+                        class="link-block"
                       >
                         <div class="_1u60u8g">
                           <div class="_hgs47m">
@@ -765,7 +765,7 @@
                         data-no-client-routing="true"
                         data-testid="header-menu-link"
                         type="button"
-                        class="_131n1yh"
+                        class="link-block"
                       >
                         <div class="_1u60u8g">
                           <div class="_hgs47m">
@@ -800,7 +800,7 @@
                         data-no-client-routing="true"
                         data-testid="header-menu-link"
                         type="button"
-                        class="_131n1yh"
+                        class="link-block"
                       >
                         <div class="_1u60u8g">
                           <div class="_hgs47m">
@@ -1308,7 +1308,7 @@
                                                         <div class="_1yfus1e">
                                                             <div class="_za5sya"><a
                                                                     href="/resources/hosting-experiences/a/setting-a-pricing-strategy-for-your-experience-397"
-                                                                    class="_131n1yh">
+                                                                    class="link-block">
                                                                     <div class="_w57qiaq">
                                                                         <div data-showat="largeAndAbove">
                                                                             <div class="_3uk7gk">
@@ -1347,7 +1347,7 @@
                                                         <div class="_1yfus1e">
                                                             <div class="_za5sya"><a
                                                                     href="/resources/hosting-experiences/a/a-standout-hosts-tips-for-getting-5-star-reviews-403"
-                                                                    class="_131n1yh">
+                                                                    class="link-block">
                                                                     <div class="_w57qiaq">
                                                                         <div data-showat="largeAndAbove">
                                                                             <div class="_3uk7gk">
@@ -1386,7 +1386,7 @@
                                                         <div class="_1yfus1e">
                                                             <div class="_za5sya"><a
                                                                     href="/resources/hosting-experiences/a/experience-guest-spotlight-with-ranier-and-stephanie-402"
-                                                                    class="_131n1yh">
+                                                                    class="link-block">
                                                                     <div class="_w57qiaq">
                                                                         <div class="_1w9pxb9"><svg viewBox="0 0 24 24"
                                                                                 role="presentation" aria-hidden="true" focusable="false"
