--- a/host-liability-insurance.html
+++ b/host-liability-insurance.html
@@ -344,10 +344,10 @@
                         <main id="site-content">
                           <div class="c1dcbdcb dir dir-ltr">
                             <div class="a1icougz dir dir-ltr">
-                              <div class="cgcsmnv dir dir-ltr">
-                                <div class="t9s5w55 su0g9gz dir dir-ltr">How-to</div>
-                                <div class="t9s5w55 su0g9gz dir dir-ltr">•</div>
-                                <div class="t9s5w55 dir dir-ltr">Host</div>
+                              <div class="stack dir dir-ltr">
+                                <div class="text-muted-heading dir dir-ltr">How-to</div>
+                                <div class="text-muted-heading dir dir-ltr">•</div>
+                                <div class="text-muted-heading dir dir-ltr">Host</div>
                               </div>
                             </div>
                             <section>
@@ -488,52 +488,52 @@
                                   <h2 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                                     <div class="t15kpzrz dir dir-ltr">Related articles</div>
                                   </h2>
-                                  <ul class="l94quoy dir dir-ltr">
-                                    <li class="l1pvymst dir dir-ltr">
-                                      <a href="/help/article/279/host-damage-protection" class="_131n1yh">
-                                        <div class="ld3j1l0 dir dir-ltr">
-                                          <div class="cgcsmnv dir dir-ltr">
-                                            <div class="t9s5w55 dir dir-ltr">Host</div>
+                                  <ul class="list-group-unstyled dir dir-ltr">
+                                    <li class="list-group-unstyled__card dir dir-ltr">
+                                      <a href="/help/article/279/host-damage-protection" class="link-block">
+                                        <div class="list-group-unstyled__card-subtitle dir dir-ltr">
+                                          <div class="stack dir dir-ltr">
+                                            <div class="text-muted-heading dir dir-ltr">Host</div>
                                           </div>
                                         </div>
                                         <div>
-                                          <div class="t1imbvyv t14utcvq dir dir-ltr">Host damage protection
+                                          <div class="link-title list-group-unstyled__card-title dir dir-ltr">Host damage protection
                                           </div>
-                                          <div class="s12spazh s13lem7z dir dir-ltr">Host damage protection, a
+                                          <div class="text-ellipsis list-group-unstyled__card-text dir dir-ltr">Host damage protection, a
                                             part of AirCover for Hosts, provides Hosts with $1 million in
                                             coverage in the rare event your place or belongings …
                                           </div>
                                         </div>
                                       </a>
                                     </li>
-                                    <li class="l1pvymst dir dir-ltr">
-                                      <a href="/help/article/3145/host-liability-insurance-program-summary" class="_131n1yh">
-                                        <div class="ld3j1l0 dir dir-ltr">
-                                          <div class="cgcsmnv dir dir-ltr">
-                                            <div class="t9s5w55 dir dir-ltr">Airbnb basics</div>
+                                    <li class="list-group-unstyled__card dir dir-ltr">
+                                      <a href="/help/article/3145/host-liability-insurance-program-summary" class="link-block">
+                                        <div class="list-group-unstyled__card-subtitle dir dir-ltr">
+                                          <div class="stack dir dir-ltr">
+                                            <div class="text-muted-heading dir dir-ltr">Airbnb basics</div>
                                           </div>
                                         </div>
                                         <div>
-                                          <div class="t1imbvyv t14utcvq dir dir-ltr">Host Liability Insurance
+                                          <div class="link-title list-group-unstyled__card-title dir dir-ltr">Host Liability Insurance
                                             Program Summary
                                           </div>
-                                          <div class="s12spazh s13lem7z dir dir-ltr">Details on this key
+                                          <div class="text-ellipsis list-group-unstyled__card-text dir dir-ltr">Details on this key
                                             component of AirCover for Hosts, which is top-to-bottom
                                             protection for Airbnb Hosts.
                                           </div>
                                         </div>
                                       </a>
                                     </li>
-                                    <li class="l1pvymst dir dir-ltr">
-                                      <a href="/help/article/1608/experiences-liability-insurance" class="_131n1yh">
-                                        <div class="ld3j1l0 dir dir-ltr">
-                                          <div class="cgcsmnv dir dir-ltr">
-                                            <div class="t9s5w55 dir dir-ltr">Experience Host</div>
+                                    <li class="list-group-unstyled__card dir dir-ltr">
+                                      <a href="/help/article/1608/experiences-liability-insurance" class="link-block">
+                                        <div class="list-group-unstyled__card-subtitle dir dir-ltr">
+                                          <div class="stack dir dir-ltr">
+                                            <div class="text-muted-heading dir dir-ltr">Experience Host</div>
                                           </div>
                                         </div>
                                         <div>
-                                          <div class="t1imbvyv t14utcvq dir dir-ltr">Experiences liability insurance</div>
-                                          <div class="s12spazh s13lem7z dir dir-ltr">Experiences liability
+                                          <div class="link-title list-group-unstyled__card-title dir dir-ltr">Experiences liability insurance</div>
+                                          <div class="text-ellipsis list-group-unstyled__card-text dir dir-ltr">Experiences liability
                                             insurance is a key component of AirCover for Hosts, which is
                                             top-to-bottom protection for Airbnb Hosts.
                                           </div>
