--- a/lps-resources/resources.html
+++ b/lps-resources/resources.html
@@ -222,7 +222,7 @@
                                           aria-expanded="false"
                                           aria-haspopup="true"
                                           type="button"
-                                          class="_131n1yh topic-dropdown"
+                                          class="link-block topic-dropdown"
                                         >
                                           <div class="_10o1uew">
                                             <div class="_pez1s5">Topics</div>
@@ -461,7 +461,7 @@
                             data-no-client-routing="true"
                             data-testid="header-menu-link"
                             href="/resources/hosting-experiences/t/getting-started-53"
-                            class="_131n1yh"
+                            class="link-block"
                           >
                             <div class="_1u60u8g">
                               <div class="_hgs47m">
@@ -477,7 +477,7 @@
                             data-no-client-routing="true"
                             data-testid="header-menu-link"
                             href="/resources/hosting-experiences/t/attracting-bookings-59"
-                            class="_131n1yh"
+                            class="link-block"
                           >
                             <div class="_1u60u8g">
                               <div class="_hgs47m">
@@ -495,7 +495,7 @@
                             data-no-client-routing="true"
                             data-testid="header-menu-link"
                             href="/resources/hosting-experiences/t/providing-a-5-star-experience-61"
-                            class="_131n1yh"
+                            class="link-block"
                           >
                             <div class="_1u60u8g">
                               <div class="_hgs47m">
@@ -513,7 +513,7 @@
                             data-no-client-routing="true"
                             data-testid="header-menu-link"
                             href="/resources/hosting-experiences/t/responsible-hosting-64"
-                            class="_131n1yh"
+                            class="link-block"
                           >
                             <div class="_1u60u8g">
                               <div class="_hgs47m">
@@ -531,7 +531,7 @@
                             data-no-client-routing="true"
                             data-testid="header-menu-link"
                             href="/resources/hosting-experiences/t/online-experiences-55"
-                            class="_131n1yh"
+                            class="link-block"
                           >
                             <div class="_1u60u8g">
                               <div class="_hgs47m">
@@ -561,7 +561,7 @@
                             data-no-client-routing="true"
                             data-testid="header-menu-link"
                             href="/resources/hosting-experiences/t/news-and-updates-for-experiences-56"
-                            class="_131n1yh"
+                            class="link-block"
                           >
                             <div class="_1u60u8g">
                               <div class="_hgs47m">
@@ -583,7 +583,7 @@
                       data-no-client-routing="true"
                       data-testid="header-menu-link"
                       href="/host/homes"
-                      class="_131n1yh"
+                      class="link-block"
                     >
                       <div class="_1u60u8g">
                         <div class="_hgs47m">
@@ -631,7 +631,7 @@
                         data-no-client-routing="true"
                         data-testid="header-menu-link"
                         href="/users/show/423517614"
-                        class="_131n1yh"
+                        class="link-block"
                       >
                         <div class="_1u60u8g">
                           <div class="_hgs47m">
@@ -666,7 +666,7 @@
                         data-no-client-routing="true"
                         data-testid="header-menu-link"
                         href="/account-settings"
-                        class="_131n1yh"
+                        class="link-block"
                       >
                         <div class="_1u60u8g">
                           <div class="_hgs47m">
@@ -715,7 +715,7 @@
                         data-no-client-routing="true"
                         data-testid="header-menu-link"
                         href="/help"
-                        class="_131n1yh"
+                        class="link-block"
                       >
                         <div class="_1u60u8g">
                           <div class="_hgs47m">
@@ -764,7 +764,7 @@
                         data-no-client-routing="true"
                         data-testid="header-menu-link"
                         type="button"
-                        class="_131n1yh"
+                        class="link-block"
                       >
                         <div class="_1u60u8g">
                           <div class="_hgs47m">
@@ -799,7 +799,7 @@
                         data-no-client-routing="true"
                         data-testid="header-menu-link"
                         type="button"
-                        class="_131n1yh"
+                        class="link-block"
                       >
                         <div class="_1u60u8g">
                           <div class="_hgs47m">
