--- a/messages-loader.html
+++ b/messages-loader.html
@@ -1324,7 +1324,7 @@
                                       <div class="_lgvpr7">
                                         <div class="_1sa9fsq"><a
                                             href="/rooms/35353333?check_in=2021-12-21&amp;check_out=2021-12-23&amp;guests=1&amp;adults=1&amp;children=0&amp;infants=0"
-                                            class="_131n1yh">
+                                            class="link-block">
                                             <div class="_15xwphn">
                                               <div class="_p60foa">
                                                 <div class="img-middle"
