--- a/messages.html
+++ b/messages.html
@@ -1541,7 +1541,7 @@
                                       <div class="_lgvpr7">
                                         <div class="_1sa9fsq"><a
                                             href="/rooms/35353333?check_in=2021-12-21&amp;check_out=2021-12-23&amp;guests=1&amp;adults=1&amp;children=0&amp;infants=0"
-                                            class="_131n1yh">
+                                            class="link-block">
                                             <div class="_15xwphn">
                                               <div class="_p60foa">
                                                 <div class="img-middle"
@@ -3929,7 +3929,7 @@
                                         </div>
                                         <div style="margin-top: 48px; margin-bottom: 24px;">
                                           <div class="_1mctm6ho">Trip Details</div>
-                                        </div><a target="_blank" href="/rooms/35353333" class="_131n1yh">
+                                        </div><a target="_blank" href="/rooms/35353333" class="link-block">
                                           <div class="_14t73ln">
                                             <div class="_1usfdv82">
                                               <div style="margin-bottom: 4px;">
@@ -3956,7 +3956,7 @@
                                         </div>
                                         <ul class="_11hau3k">
                                           <li class="_uhlm2"><a target="_blank" href="/users/show/265061590"
-                                              class="_131n1yh">
+                                              class="link-block">
                                               <div class="_12d0llg5">
                                                 <div class="_qo24lwc">
                                                   <div>
