--- a/searching-for-stays.html
+++ b/searching-for-stays.html
@@ -436,12 +436,12 @@
                         <main id="site-content">
                           <div class="c1dcbdcb dir dir-ltr">
                             <div class="a1icougz dir dir-ltr">
-                              <div class="cgcsmnv dir dir-ltr">
-                                <div class="t9s5w55 su0g9gz dir dir-ltr">
+                              <div class="stack dir dir-ltr">
+                                <div class="text-muted-heading dir dir-ltr">
                                   How-to
                                 </div>
-                                <div class="t9s5w55 su0g9gz dir dir-ltr">•</div>
-                                <div class="t9s5w55 dir dir-ltr">Guest</div>
+                                <div class="text-muted-heading dir dir-ltr">•</div>
+                                <div class="text-muted-heading dir dir-ltr">Guest</div>
                               </div>
                             </div>
                             <section>
@@ -1023,26 +1023,26 @@
                                       Related articles
                                     </div>
                                   </h2>
-                                  <ul class="l94quoy dir dir-ltr">
-                                    <li class="l1pvymst dir dir-ltr">
+                                  <ul class="list-group-unstyled dir dir-ltr">
+                                    <li class="list-group-unstyled__card dir dir-ltr">
                                       <a
                                         href="/help/article/421/search-by-neighborhood"
-                                        class="_131n1yh"
-                                        ><div class="ld3j1l0 dir dir-ltr">
-                                          <div class="cgcsmnv dir dir-ltr">
-                                            <div class="t9s5w55 dir dir-ltr">
+                                        class="link-block"
+                                        ><div class="list-group-unstyled__card-subtitle dir dir-ltr">
+                                          <div class="stack dir dir-ltr">
+                                            <div class="text-muted-heading dir dir-ltr">
                                               Guest
                                             </div>
                                           </div>
                                         </div>
                                         <div>
                                           <div
-                                            class="t1imbvyv t14utcvq dir dir-ltr"
+                                            class="link-title list-group-unstyled__card-title dir dir-ltr"
                                           >
                                             Search by neighborhood
                                           </div>
                                           <div
-                                            class="s12spazh s13lem7z dir dir-ltr"
+                                            class="text-ellipsis list-group-unstyled__card-text dir dir-ltr"
                                           >
                                             You can search by neighborhood
                                             neighborhood, landmark, and more by
@@ -1052,18 +1052,18 @@
                                         </div></a
                                       >
                                     </li>
-                                    <li class="l1pvymst dir dir-ltr">
+                                    <li class="list-group-unstyled__card dir dir-ltr">
                                       <a
                                         href="/help/article/3117/finding-a-stay-thats-right-for-you"
-                                        class="_131n1yh"
+                                        class="link-block"
                                         ><div>
                                           <div
-                                            class="t1imbvyv t14utcvq dir dir-ltr"
+                                            class="link-title list-group-unstyled__card-title dir dir-ltr"
                                           >
                                             Finding a stay that's right for you
                                           </div>
                                           <div
-                                            class="s12spazh s13lem7z dir dir-ltr"
+                                            class="text-ellipsis list-group-unstyled__card-text dir dir-ltr"
                                           >
                                             Want help finding a great place to
                                             stay? Here are the top areas that
@@ -1074,25 +1074,25 @@
                                         </div></a
                                       >
                                     </li>
-                                    <li class="l1pvymst dir dir-ltr">
+                                    <li class="list-group-unstyled__card dir dir-ltr">
                                       <a
                                         href="/help/article/1967/when-youll-get-your-refund"
-                                        class="_131n1yh"
-                                        ><div class="ld3j1l0 dir dir-ltr">
-                                          <div class="cgcsmnv dir dir-ltr">
-                                            <div class="t9s5w55 dir dir-ltr">
+                                        class="link-block"
+                                        ><div class="list-group-unstyled__card-subtitle dir dir-ltr">
+                                          <div class="stack dir dir-ltr">
+                                            <div class="text-muted-heading dir dir-ltr">
                                               Guest
                                             </div>
                                           </div>
                                         </div>
                                         <div>
                                           <div
-                                            class="t1imbvyv t14utcvq dir dir-ltr"
+                                            class="link-title list-group-unstyled__card-title dir dir-ltr"
                                           >
                                             When you’ll get your refund
                                           </div>
                                           <div
-                                            class="s12spazh s13lem7z dir dir-ltr"
+                                            class="text-ellipsis list-group-unstyled__card-text dir dir-ltr"
                                           >
                                             While they are issued almost
                                             immediately, most refunds arrive
