--- a/topic.html
+++ b/topic.html
@@ -224,7 +224,7 @@
                                           aria-expanded="false"
                                           aria-haspopup="true"
                                           type="button"
-                                          class="_131n1yh topic-dropdown"
+                                          class="link-block topic-dropdown"
                                         >
                                           <div class="_10o1uew">
                                             <div class="_pez1s5">Topics</div>
@@ -463,7 +463,7 @@
                             data-no-client-routing="true"
                             data-testid="header-menu-link"
                             href="/resources/hosting-experiences/t/getting-started-53"
-                            class="_131n1yh"
+                            class="link-block"
                           >
                             <div class="_1u60u8g">
                               <div class="_hgs47m">
@@ -479,7 +479,7 @@
                             data-no-client-routing="true"
                             data-testid="header-menu-link"
                             href="/resources/hosting-experiences/t/attracting-bookings-59"
-                            class="_131n1yh"
+                            class="link-block"
                           >
                             <div class="_1u60u8g">
                               <div class="_hgs47m">
@@ -497,7 +497,7 @@
                             data-no-client-routing="true"
                             data-testid="header-menu-link"
                             href="/resources/hosting-experiences/t/providing-a-5-star-experience-61"
-                            class="_131n1yh"
+                            class="link-block"
                           >
                             <div class="_1u60u8g">
                               <div class="_hgs47m">
@@ -515,7 +515,7 @@
                             data-no-client-routing="true"
                             data-testid="header-menu-link"
                             href="/resources/hosting-experiences/t/responsible-hosting-64"
-                            class="_131n1yh"
+                            class="link-block"
                           >
                             <div class="_1u60u8g">
                               <div class="_hgs47m">
@@ -533,7 +533,7 @@
                             data-no-client-routing="true"
                             data-testid="header-menu-link"
                             href="/resources/hosting-experiences/t/online-experiences-55"
-                            class="_131n1yh"
+                            class="link-block"
                           >
                             <div class="_1u60u8g">
                               <div class="_hgs47m">
@@ -563,7 +563,7 @@
                             data-no-client-routing="true"
                             data-testid="header-menu-link"
                             href="/resources/hosting-experiences/t/news-and-updates-for-experiences-56"
-                            class="_131n1yh"
+                            class="link-block"
                           >
                             <div class="_1u60u8g">
                               <div class="_hgs47m">
@@ -585,7 +585,7 @@
                       data-no-client-routing="true"
                       data-testid="header-menu-link"
                       href="/host/homes"
-                      class="_131n1yh"
+                      class="link-block"
                     >
                       <div class="_1u60u8g">
                         <div class="_hgs47m">
@@ -633,7 +633,7 @@
                         data-no-client-routing="true"
                         data-testid="header-menu-link"
                         href="/users/show/423517614"
-                        class="_131n1yh"
+                        class="link-block"
                       >
                         <div class="_1u60u8g">
                           <div class="_hgs47m">
@@ -668,7 +668,7 @@
                         data-no-client-routing="true"
                         data-testid="header-menu-link"
                         href="/account-settings"
-                        class="_131n1yh"
+                        class="link-block"
                       >
                         <div class="_1u60u8g">
                           <div class="_hgs47m">
@@ -717,7 +717,7 @@
                         data-no-client-routing="true"
                         data-testid="header-menu-link"
                         href="/help"
-                        class="_131n1yh"
+                        class="link-block"
                       >
                         <div class="_1u60u8g">
                           <div class="_hgs47m">
@@ -766,7 +766,7 @@
                         data-no-client-routing="true"
                         data-testid="header-menu-link"
                         type="button"
-                        class="_131n1yh"
+                        class="link-block"
                       >
                         <div class="_1u60u8g">
                           <div class="_hgs47m">
@@ -801,7 +801,7 @@
                         data-no-client-routing="true"
                         data-testid="header-menu-link"
                         type="button"
-                        class="_131n1yh"
+                        class="link-block"
                       >
                         <div class="_1u60u8g">
                           <div class="_hgs47m">
@@ -1018,7 +1018,7 @@
                                                         <div class="_1yfus1e">
                                                             <div class="_za5sya"><a
                                                                     href="/resources/hosting-experiences/a/easy-ways-to-help-attract-bookings-for-your-experience-400"
-                                                                    class="_131n1yh">
+                                                                    class="link-block">
                                                                     <div class="_w57qiaq">
                                                                         <div data-showat="largeAndAbove">
                                                                             <div class="_3uk7gk">
@@ -1057,7 +1057,7 @@
                                                         <div class="_1yfus1e">
                                                             <div class="_za5sya"><a
                                                                     href="/resources/hosting-experiences/a/setting-a-pricing-strategy-for-your-experience-397"
-                                                                    class="_131n1yh">
+                                                                    class="link-block">
                                                                     <div class="_w57qiaq">
                                                                         <div data-showat="largeAndAbove">
                                                                             <div class="_3uk7gk">
@@ -1096,7 +1096,7 @@
                                                         <div class="_1yfus1e">
                                                             <div class="_za5sya"><a
                                                                     href="/resources/hosting-experiences/a/how-a-co-host-can-help-grow-and-manage-your-experience-408"
-                                                                    class="_131n1yh">
+                                                                    class="link-block">
                                                                     <div class="_w57qiaq">
                                                                         <div data-showat="largeAndAbove">
                                                                             <div class="_3uk7gk">
@@ -1135,7 +1135,7 @@
                                                         <div class="_1yfus1e">
                                                             <div class="_za5sya"><a
                                                                     href="/resources/hosting-experiences/a/these-simple-host-tools-can-help-attract-more-guests-479"
-                                                                    class="_131n1yh">
+                                                                    class="link-block">
                                                                     <div class="_w57qiaq">
                                                                         <div data-showat="largeAndAbove">
                                                                             <div class="_3uk7gk">
@@ -1174,7 +1174,7 @@
                                                         <div class="_1yfus1e">
                                                             <div class="_za5sya"><a
                                                                     href="/resources/hosting-experiences/a/seo-tips-for-ranking-higher-in-search-512"
-                                                                    class="_131n1yh">
+                                                                    class="link-block">
                                                                     <div class="_w57qiaq">
                                                                         <div data-showat="largeAndAbove">
                                                                             <div class="_3uk7gk">
@@ -1213,7 +1213,7 @@
                                                         <div class="_1yfus1e">
                                                             <div class="_za5sya"><a
                                                                     href="/resources/hosting-experiences/a/how-seo-keywords-can-help-guests-find-your-experience-513"
-                                                                    class="_131n1yh">
+                                                                    class="link-block">
                                                                     <div class="_w57qiaq">
                                                                         <div data-showat="largeAndAbove">
                                                                             <div class="_3uk7gk">
@@ -1252,7 +1252,7 @@
                                                         <div class="_1yfus1e">
                                                             <div class="_za5sya"><a
                                                                     href="/resources/hosting-experiences/a/help-guests-with-disabilities-join-your-experience-438"
-                                                                    class="_131n1yh">
+                                                                    class="link-block">
                                                                     <div class="_w57qiaq">
                                                                         <div data-showat="largeAndAbove">
                                                                             <div class="_3uk7gk">
@@ -1291,7 +1291,7 @@
                                                         <div class="_1yfus1e">
                                                             <div class="_za5sya"><a
                                                                     href="/resources/hosting-experiences/a/experience-guest-spotlight-with-ranier-and-stephanie-402"
-                                                                    class="_131n1yh">
+                                                                    class="link-block">
                                                                     <div class="_w57qiaq">
                                                                         <div class="_1w9pxb9"><svg viewBox="0 0 24 24"
                                                                                 role="presentation" aria-hidden="true" focusable="false"
@@ -1337,7 +1337,7 @@
                                                         <div class="_1yfus1e">
                                                             <div class="_za5sya"><a
                                                                     href="/resources/hosting-experiences/a/who-books-airbnb-experiences-and-why-401"
-                                                                    class="_131n1yh">
+                                                                    class="link-block">
                                                                     <div class="_w57qiaq">
                                                                         <div class="_1w9pxb9"><svg viewBox="0 0 24 24"
                                                                                 role="presentation" aria-hidden="true" focusable="false"
@@ -1383,7 +1383,7 @@
                                                         <div class="_1yfus1e">
                                                             <div class="_za5sya"><a
                                                                     href="/resources/hosting-experiences/a/expand-your-business-into-different-languages-407"
-                                                                    class="_131n1yh">
+                                                                    class="link-block">
                                                                     <div class="_w57qiaq">
                                                                         <div data-showat="largeAndAbove">
                                                                             <div class="_3uk7gk">
@@ -1422,7 +1422,7 @@
                                                         <div class="_1yfus1e">
                                                             <div class="_za5sya"><a
                                                                     href="/resources/hosting-experiences/a/your-guide-to-a-standout-experience-page-398"
-                                                                    class="_131n1yh">
+                                                                    class="link-block">
                                                                     <div class="_w57qiaq">
                                                                         <div data-showat="largeAndAbove">
                                                                             <div class="_3uk7gk">
@@ -1461,7 +1461,7 @@
                                                         <div class="_1yfus1e">
                                                             <div class="_za5sya"><a
                                                                     href="/resources/hosting-experiences/a/promoting-your-experience-390"
-                                                                    class="_131n1yh">
+                                                                    class="link-block">
                                                                     <div class="_w57qiaq">
                                                                         <div data-showat="largeAndAbove">
                                                                             <div class="_3uk7gk">
