--- a/video.html
+++ b/video.html
@@ -224,7 +224,7 @@
                                           aria-expanded="false"
                                           aria-haspopup="true"
                                           type="button"
-                                          class="_131n1yh topic-dropdown"
+                                          class="link-block topic-dropdown"
                                         >
                                           <div class="_10o1uew">
                                             <div class="_pez1s5">Topics</div>
@@ -463,7 +463,7 @@
                             data-no-client-routing="true"
                             data-testid="header-menu-link"
                             href="/resources/hosting-experiences/t/getting-started-53"
-                            class="_131n1yh"
+                            class="link-block"
                           >
                             <div class="_1u60u8g">
                               <div class="_hgs47m">
@@ -479,7 +479,7 @@
                             data-no-client-routing="true"
                             data-testid="header-menu-link"
                             href="/resources/hosting-experiences/t/attracting-bookings-59"
-                            class="_131n1yh"
+                            class="link-block"
                           >
                             <div class="_1u60u8g">
                               <div class="_hgs47m">
@@ -497,7 +497,7 @@
                             data-no-client-routing="true"
                             data-testid="header-menu-link"
                             href="/resources/hosting-experiences/t/providing-a-5-star-experience-61"
-                            class="_131n1yh"
+                            class="link-block"
                           >
                             <div class="_1u60u8g">
                               <div class="_hgs47m">
@@ -515,7 +515,7 @@
                             data-no-client-routing="true"
                             data-testid="header-menu-link"
                             href="/resources/hosting-experiences/t/responsible-hosting-64"
-                            class="_131n1yh"
+                            class="link-block"
                           >
                             <div class="_1u60u8g">
                               <div class="_hgs47m">
@@ -533,7 +533,7 @@
                             data-no-client-routing="true"
                             data-testid="header-menu-link"
                             href="/resources/hosting-experiences/t/online-experiences-55"
-                            class="_131n1yh"
+                            class="link-block"
                           >
                             <div class="_1u60u8g">
                               <div class="_hgs47m">
@@ -563,7 +563,7 @@
                             data-no-client-routing="true"
                             data-testid="header-menu-link"
                             href="/resources/hosting-experiences/t/news-and-updates-for-experiences-56"
-                            class="_131n1yh"
+                            class="link-block"
                           >
                             <div class="_1u60u8g">
                               <div class="_hgs47m">
@@ -585,7 +585,7 @@
                       data-no-client-routing="true"
                       data-testid="header-menu-link"
                       href="/host/homes"
-                      class="_131n1yh"
+                      class="link-block"
                     >
                       <div class="_1u60u8g">
                         <div class="_hgs47m">
@@ -633,7 +633,7 @@
                         data-no-client-routing="true"
                         data-testid="header-menu-link"
                         href="/users/show/423517614"
-                        class="_131n1yh"
+                        class="link-block"
                       >
                         <div class="_1u60u8g">
                           <div class="_hgs47m">
@@ -668,7 +668,7 @@
                         data-no-client-routing="true"
                         data-testid="header-menu-link"
                         href="/account-settings"
-                        class="_131n1yh"
+                        class="link-block"
                       >
                         <div class="_1u60u8g">
                           <div class="_hgs47m">
@@ -717,7 +717,7 @@
                         data-no-client-routing="true"
                         data-testid="header-menu-link"
                         href="/help"
-                        class="_131n1yh"
+                        class="link-block"
                       >
                         <div class="_1u60u8g">
                           <div class="_hgs47m">
@@ -766,7 +766,7 @@
                         data-no-client-routing="true"
                         data-testid="header-menu-link"
                         type="button"
-                        class="_131n1yh"
+                        class="link-block"
                       >
                         <div class="_1u60u8g">
                           <div class="_hgs47m">
@@ -801,7 +801,7 @@
                         data-no-client-routing="true"
                         data-testid="header-menu-link"
                         type="button"
-                        class="_131n1yh"
+                        class="link-block"
                       >
                         <div class="_1u60u8g">
                           <div class="_hgs47m">
@@ -1187,7 +1187,7 @@
                                       <div class="_1tdgoer">
                                         <div class="_1yfus1e">
                                           <div class="_za5sya">
-                                            <a href="/resources/hosting-experiences/a/promoting-your-experience-390" class="_131n1yh">
+                                            <a href="/resources/hosting-experiences/a/promoting-your-experience-390" class="link-block">
                                               <div class="_w57qiaq">
                                                 <div data-showat="largeAndAbove">
                                                   <div class="_3uk7gk">
@@ -1215,7 +1215,7 @@
                                       <div class="_1tdgoer">
                                         <div class="_1yfus1e">
                                           <div class="_za5sya">
-                                            <a href="/resources/hosting-experiences/a/the-4-hospitality-keys-that-unlock-5-star-reviews-392" class="_131n1yh">
+                                            <a href="/resources/hosting-experiences/a/the-4-hospitality-keys-that-unlock-5-star-reviews-392" class="link-block">
                                               <div class="_w57qiaq">
                                                 <div data-showat="largeAndAbove">
                                                   <div class="_3uk7gk">
@@ -1242,7 +1242,7 @@
                                       <div class="_1tdgoer">
                                         <div class="_1yfus1e">
                                           <div class="_za5sya">
-                                            <a href="/resources/hosting-experiences/a/five-product-features-to-attract-more-guests-399" class="_131n1yh">
+                                            <a href="/resources/hosting-experiences/a/five-product-features-to-attract-more-guests-399" class="link-block">
                                               <div class="_w57qiaq">
                                                 <div data-showat="largeAndAbove">
                                                   <div class="_3uk7gk">
